CH5: Fixed rocks location so it does not blink when status(correct|wrong) changes,  CH6: Added bigger board so text does not overflow

--- a/src/pages/game/game-challenge.scss
+++ b/src/pages/game/game-challenge.scss
@@ -4287,7 +4287,7 @@ page-game-challenge {
       pointer-events: none;
 
       $icons: opt-panel;
-      @include appSpriteIcons($icons, 50px, 50px, 0, 0px, 940px, 126px);
+      @include appSpriteIcons($icons, 50px, 50px, 0, 0px, 1054px, 126px);
     }
   }
 /**********************************************************************
